# operating-systems-uni

./: .gitignore
lab10/: CMakeLists.txt  ex_1.c  ex_2.c
lab2/: CMakeLists.txt  main.c
lab2/include/: functions.h
lab4/: CMakeLists.txt  main.c
lab6/: CMakeLists.txt  main.c
lab7/: CMakeLists.txt  file.txt  main.c
lab8/: CMakeLists.txt  file1  file2  main.c
